--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,19 @@
 .app > div {
   margin-right: 50px;
 }
+
+.error {
+  border: red 1px solid;
+}
+
+.error-message {
+  color: red;
+}
+
+.active-filter {
+  background-color: rgba(143, 143, 241, 0.91);
+}
+
+.is-done {
+  opacity: 0.5;
+}
